Outlook client - Fix subject text overlaping with body
AB#834

--- a/src/Web/WebOffice365Client/Client/src/components/content/message-list/message-content/messageContent.scss
+++ b/src/Web/WebOffice365Client/Client/src/components/content/message-list/message-content/messageContent.scss
@@ -6,11 +6,12 @@
 }
 
 .message-content {
-    position: absolute;
+    //position: absolute;
+    flex: 1 1 auto;
     left: 0;
     right: 0;
     top: 64px;
-    bottom: 10px;
+    //bottom: 10px;
 
     > iframe {
         width: 98%;
